--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Nathan Miller
 
 # Short bio or description (displayed in the header)
-description: Giant Nerd
+description: "Rated #1 in initial awkwardness by JD Power."
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars3.githubusercontent.com/u/319295?s=460&v=4
 
 #
 # Flags below are optional
@@ -85,4 +85,4 @@ exclude:
   - README.md
   - CNAME
 
-theme: jekyll-theme-midnight
+theme: jekyll-theme-cayman
